--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top offline site development software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free bootstrap website building software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="EZ/Qk0HaLCRPVft/lbV9i3x4zbEXRp0GLtmtEN+/VdmiKnDolNS3f6ut1QeBH+9j127+8heJpLlY71mDw8hUMhGnoYw1QV3Myp8o+63znocMHz3qFQrofZAWaDQBygdu" data-form-email="true">
+                    <input type="hidden" value="5CAyn1CzAdtkhyclReOCy9JpqX3nV8znsziY9LD56Co2mWWeA+F7a8dtu0Hml9EoFelProyXQa+xLK8a0TfnKrtSzVPmvs+E2z/GHMvdtC998QeQxkqRJDXvkPkT0KJM" data-form-email="true">
 
                     
 
